--- a/Something Management Program Remastered/View/MainPage.xaml
+++ b/Something Management Program Remastered/View/MainPage.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MainPage" Height="450" Width="800">
+        Title="MainPage" Height="479" Width="800">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -20,10 +20,10 @@
             </Grid.ColumnDefinitions>
 
             <Label Grid.Column="0" Content="{Binding SelectedObjectiveValue.CurrentTime}" MinWidth="125" HorizontalAlignment="Right" Margin="2,2,2,2"  MinHeight="20" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <Button Grid.Column="1" Command="{Binding SkipTimeCommand}" Content="- Calculate -" HorizontalAlignment="Center"  Margin="2,2,2,2" FontSize="14" FontWeight="Bold" MinHeight="29"/>
+            <Button Grid.Column="1" Command="{Binding SkipTimeCommand}" Content="- Calculate -" HorizontalAlignment="Center"  Margin="2,2,2,2" FontSize="14" FontWeight="Bold" MinHeight="10" BorderBrush="{x:Null}"/>
             <TextBox Text="{Binding SelectedObjectiveValue.SetTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" HorizontalAlignment="Left" MinWidth="125" Margin="5,2,2,2" FontSize="12" MinHeight="20" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         </Grid>
-        
+
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
@@ -33,9 +33,10 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
 
-            <ListView x:Name="ObjectiveValueCollectionListView" SelectedItem="{Binding SelectedObjectiveValue}" ItemsSource="{Binding ObjectiveValueCollection}" BorderBrush="{x:Null}" IsSynchronizedWithCurrentItem="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" VerticalAlignment="Top" Height="175" Grid.Column="1" >
+            <ListView x:Name="ObjectiveValueCollectionListView" SelectedItem="{Binding SelectedObjectiveValue}" ItemsSource="{Binding ObjectiveValueCollection}" BorderBrush="{x:Null}" IsSynchronizedWithCurrentItem="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" VerticalAlignment="Center" Height="190" Grid.ColumnSpan="2" Margin="229,0,0,0" >
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" ></GridViewColumn>
@@ -72,7 +73,13 @@
                 </StackPanel>
             </Grid>
 
-            <ListView x:Name="ModifierCollectionListView" Grid.Column="1" Grid.Row="1" SelectedItem="{Binding SelectedModifier}" ItemsSource="{Binding SelectedObjectiveValue.Modifiers}" BorderBrush="{x:Null}" IsSynchronizedWithCurrentItem="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" >
+            <StackPanel Grid.Row="1" Grid.Column="1">
+                    <Label Grid.Column="0" Content="{Binding SelectedObjectiveValue.CurrentTime}" MinWidth="125" HorizontalAlignment="Right" Margin="2,2,2,2"  MinHeight="20" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
+                    <Button Grid.Column="1" Command="{Binding SkipTimeCommand}" Content="- Calculate -" HorizontalAlignment="Center"  Margin="2,2,2,2" FontSize="14" FontWeight="Bold" MinHeight="10" BorderBrush="{x:Null}"/>
+                    <TextBox Text="{Binding SelectedObjectiveValue.SetTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" HorizontalAlignment="Left" MinWidth="125" Margin="5,2,2,2" FontSize="12" MinHeight="20" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+            </StackPanel>
+
+            <ListView x:Name="ModifierCollectionListView" Grid.Column="1" Grid.Row="2" SelectedItem="{Binding SelectedModifier}" ItemsSource="{Binding SelectedObjectiveValue.Modifiers}" BorderBrush="{x:Null}" IsSynchronizedWithCurrentItem="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" >
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" ></GridViewColumn>
@@ -84,7 +91,7 @@
                 </ListView.View>
             </ListView>
 
-            <Grid Grid.Row="1" Margin="5,5,5,5">
+            <Grid Grid.Row="2" Margin="5,5,5,5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
@@ -109,5 +116,6 @@
                 </StackPanel>
             </Grid>
         </Grid>
+
     </Grid>
 </Window>
