--- a/Something Management Program Remastered/View/MainPage.xaml
+++ b/Something Management Program Remastered/View/MainPage.xaml
@@ -74,10 +74,10 @@
             </Grid>
 
             <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1" >
-                <Button Command="{Binding AddModifierTimeStampCommand}" Grid.Column="1" Content="Select Modifier" HorizontalAlignment="Left" Margin="1,1,1,1" VerticalAlignment="Center" Grid.IsSharedSizeScope="True" Background="#FFB7BBC3" BorderBrush="{x:Null}"/>
+                <Button Command="{Binding AddModifierTreeItemCommand}" Grid.Column="1" Content="Select Modifier" HorizontalAlignment="Left" Margin="1,1,1,1" VerticalAlignment="Center" Grid.IsSharedSizeScope="True" Background="#FFB7BBC3" BorderBrush="{x:Null}"/>
                 <Label Content=">=>" FontFamily="Cascadia Code" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14"/>
-                <Button Grid.Row="1" Command="{Binding SelectModifierTimeStampCommand}" CommandParameter="{Binding SelectedObjectiveValue}" Grid.Column="1" Content="{Binding SelectedObjectiveValue.Name}" HorizontalAlignment="Left" Margin="1,1,1,1" VerticalAlignment="Center" Grid.IsSharedSizeScope="True" Background="#FFB7BBC3" BorderBrush="{x:Null}"/>
-                <ItemsControl Name="ModifierTimeLine" ItemsSource="{Binding SelectedModifierTimeLine}">
+                <Button Grid.Row="1" Command="{Binding SelectModifierTreeCommand}" CommandParameter="{Binding SelectedObjectiveValue}" Grid.Column="1" Content="{Binding SelectedObjectiveValue.Name}" HorizontalAlignment="Left" Margin="1,1,1,1" VerticalAlignment="Center" Grid.IsSharedSizeScope="True" Background="#FFB7BBC3" BorderBrush="{x:Null}"/>
+                <ItemsControl Name="ModifierTree" ItemsSource="{Binding SelectedModifierTree}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <StackPanel Orientation="Horizontal"/>
@@ -87,7 +87,7 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content=">=>" FontFamily="Cascadia Code" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14"/>
-                                <Button Grid.Row="1" Command="{Binding DataContext.SelectModifierTimeStampCommand, ElementName=ModifierTimeLine}" CommandParameter="{Binding Path=.}" Grid.Column="1" Content="{Binding Name}" HorizontalAlignment="Left" Margin="1,1,1,1" VerticalAlignment="Center" Grid.IsSharedSizeScope="True" Background="#FFB7BBC3" BorderBrush="{x:Null}"/>
+                                <Button Grid.Row="1" Command="{Binding DataContext.SelectModifierTreeCommand, ElementName=ModifierTree}" CommandParameter="{Binding Path=.}" Grid.Column="1" Content="{Binding Name}" HorizontalAlignment="Left" Margin="1,1,1,1" VerticalAlignment="Center" Grid.IsSharedSizeScope="True" Background="#FFB7BBC3" BorderBrush="{x:Null}"/>
                             </StackPanel>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
