--- a/Something Management Program Remastered/View/MainPage.xaml
+++ b/Something Management Program Remastered/View/MainPage.xaml
@@ -36,7 +36,7 @@
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
 
-            <ListView x:Name="ObjectiveValueCollectionListView" SelectedItem="{Binding SelectedObjectiveValue}" ItemsSource="{Binding ObjectiveValueCollection}" BorderBrush="{x:Null}" IsSynchronizedWithCurrentItem="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" VerticalAlignment="Center" Height="190" Grid.ColumnSpan="2" Margin="229,0,0,0" >
+            <ListView x:Name="ObjectiveValueCollectionListView" SelectedItem="{Binding SelectedObjectiveValue}" ItemsSource="{Binding ProjectInfo.ObjectiveValueCollection}" BorderBrush="{x:Null}" IsSynchronizedWithCurrentItem="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" VerticalAlignment="Center" Height="190" Grid.ColumnSpan="2" Margin="229,0,0,0" >
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" ></GridViewColumn>
@@ -73,27 +73,7 @@
                 </StackPanel>
             </Grid>
 
-            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1" >
-                <Button Command="{Binding AddModifierTreeItemCommand}" Grid.Column="1" Content="Select Modifier" HorizontalAlignment="Left" Margin="1,1,1,1" VerticalAlignment="Center" Grid.IsSharedSizeScope="True" Background="#FFB7BBC3" BorderBrush="{x:Null}"/>
-                <Button Command="{Binding ResetModifierTreeItemCommand}" Grid.Column="1" Content="{Binding SelectedObjectiveValue.Name}" HorizontalAlignment="Left" Margin="1,1,1,1" VerticalAlignment="Center" Grid.IsSharedSizeScope="True" Background="#FFB7BBC3" BorderBrush="{x:Null}"/>
-                <ItemsControl Name="ModifierTree" ItemsSource="{Binding SelectedModifierTree}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel Orientation="Horizontal"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <Label Content=">=>" FontFamily="Cascadia Code" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14"/>
-                                <Button Grid.Row="1" Command="{Binding DataContext.SelectModifierTreeCommand, ElementName=ModifierTree}" CommandParameter="{Binding Path=.}" Grid.Column="1" Content="{Binding Name}" HorizontalAlignment="Left" Margin="1,1,1,1" VerticalAlignment="Center" Grid.IsSharedSizeScope="True" Background="#FFB7BBC3" BorderBrush="{x:Null}"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </StackPanel>
-
-            <ListView x:Name="ModifierCollectionListView" Grid.Column="1" Grid.Row="2" SelectedItem="{Binding SelectedModifier}" ItemsSource="{Binding SelectedObjectiveValue.DisplayModifiers}" BorderBrush="{x:Null}" IsSynchronizedWithCurrentItem="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" >
+            <ListView x:Name="ModifierCollectionListView" Grid.Column="1" Grid.Row="2" SelectedItem="{Binding SelectedModifier}" ItemsSource="{Binding ProjectInfo.DisplayModifiers}" BorderBrush="{x:Null}" IsSynchronizedWithCurrentItem="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" >
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" ></GridViewColumn>
