--- a/Something Management Program Remastered/View/MainPage.xaml
+++ b/Something Management Program Remastered/View/MainPage.xaml
@@ -75,7 +75,7 @@
             
             <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1" >
                 <Button Command="{Binding AddModifierTreeItemCommand}" Grid.Column="1" Content="Select Modifier" HorizontalAlignment="Left" Margin="1,1,1,1" VerticalAlignment="Center" Grid.IsSharedSizeScope="True" Background="#FFB7BBC3" BorderBrush="{x:Null}"/>
-                <ItemsControl Name="ModifierTree" ItemsSource="{Binding SelectedModifierTree}">
+                <ItemsControl Name="ModifierTree" ItemsSource="{Binding ProjectInfo.ModifierTree}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <StackPanel Orientation="Horizontal"/>
